# GoveeSync

./: .gitignore  GameSync2024v2.py  README.md  ScreenSync.py  devices.json  devices_template.json  discover_devices.py  main.py  pyproject.toml
old/: BasicControls.py  GameSync2023.py  GameSync2024.py  GameSync2024v2.py  GetGoveeDevices.py  ScreenSync.py  controller.py  stuff.md
src/govee_screen_sync/: config.py  game_sync.py  light_device.py  main.py  models.py  screen_capture.py  utils.py
